2004-05-10  Matthias Clasen  <mclasen@redhat.com>

	Merge from HEAD:
	
	* gtk/gtkfontsel.c (list_row_activated): Make Return activate the
	default button.  (#118921)

Mon May 10 15:03:50 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkwidget.c (_gtk_widget_grab_notify): New internal function
	that emits the grab notify signal.
	
	* gtk/gtkmain.c (gtk_grab_notify_foreach): Use it here.

Mon May 10 00:51:18 2004  Matthias Clasen  <maclas@gmx.de>

	Merge from HEAD:
	
	* gtk/gtkmenu.c: Make destruction of a torn off menu work 
	like un-tearing off.

Sun May  9 21:05:38 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkactiongroup.c (gtk_action_group_add_action_with_accel): 
	Allow to suppress the stock accelerator by using "".  (#142196,
	David A Knight)
	
2004-05-08  Hans Breuer  <hans@breuer.org>

	Merge from HEAD:

	* gtk/gtkfilesystemwin32.c (extract_icon) : finally also
	create the correct mask for 'pseudo mime' icons

Sun May  9 01:57:17 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_list_button_released): 
	In list mode, accept the same mouse/wheel bindings on 
	the cellview as on the button.  (#136967)

Sun May  9 01:29:46 2004  Matthias Clasen  <maclas@gmx.de>

	Merge from HEAD:

	* gtk/gtkiconfactory.c (add_to_cache): Actually count the
	cached icons.  (#135888, Crispin Flowerday)

Sun May  9 00:03:03 2004  Matthias Clasen  <maclas@gmx.de>

	Merge from HEAD:
	
	* gtk/gtkuimanager.c (gtk_ui_manager_get_widget): Make sure
	that we actually return menus for nodes of type menu, not the
	menuitems they're attached to.

2004-05-07  Matthias Clasen  <mclasen@redhat.com>

        Merged from HEAD:
	
	* gtk/gtkbutton.c (gtk_button_size_allocate): Don't let the child
	draw over the focus rectangle.

Thu May  6 23:48:42 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkmenuitem.c (gtk_menu_item_select_timeout): Also 
	popup the submenu for items in torn off menus.  (#122051)
	
2004-05-06  Matthias Clasen  <mclasen@redhat.com>
