@@ -2,6 +2,14 @@
 
 	Merge from HEAD:
 	
+	* gtk/gtkcombobox.c (gtk_combo_box_popup) 
+	(gtk_combo_box_menu_button_press): Make sure the menu pops up
+	as wide as the combobox.  (#59660, Havoc Pennington)
+
+2004-05-10  Matthias Clasen  <mclasen@redhat.com>
+
+	Merge from HEAD:
+	
 	* gtk/gtkfontsel.c (list_row_activated): Make Return activate the
 	default button.  (#118921)
 
